kubernetes/apps/default/silverbullet/httproute.yaml
# yaml-language-server: $schema=https://www.schemastore.org/kubernetes.json
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: silverbullet
spec:
  parentRefs:
  - name: internal
    namespace: network
    sectionName: https
  hostnames:
  - notes.${SECRET_DOMAIN}
  rules:
  - backendRefs:
    - name: silverbullet
      port: 3000
